--- a/Test/Resources/Layout/Main.axml
+++ b/Test/Resources/Layout/Main.axml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="500px"
     android:background="@android:color/darker_gray">
     <Button
         android:id="@+id/MyButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Hello" />
+        android:text="蓝牙设置" />
     <Button
-        android:text="查找"
-        android:layout_width="match_parent"
+        android:id="@+id/Print"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scan" />
-    <TextView
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="55.8dp"
-        android:id="@+id/textView1"
-        android:layout_marginBottom="111.5dp"
-        android:background="@android:color/black" />
+        android:text="打印" />
 </LinearLayout>
